--- a/MovieStoreCore/appsettings.json
+++ b/MovieStoreCore/appsettings.json
@@ -5,5 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message": "TEST"
+  "Message": "TEST",
+  "ConnectionStrings": {
+    "MoviesDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MoviesList;Integrated Security=True;"
+  }
 }
